*gentoo-sources-kernelimage-4.19.71 (30 Sep 2019)

  30 Sep 2019; Agostino Sarubbo <ago@gentoo.org> +files/bashrc,
  +gentoo-sources-kernelimage-4.19.71.ebuild, +metadata.xml:
  sys-kernel/gentoo-sources-kernelimage: First commit