@@ -1,5 +1,7 @@
 AUX bashrc 635 SHA256 a123aaa2fd47326f33dfe9c8bac06adfcbbcc8d30afd75046ddf7e56bd55f9cd SHA512 9f415083ce36a6cdc318fff343b05281974b2d416c2921eb014447dc587ddd65e3263fa761a89f2341b991cc782b7d37593d6c4bc50e2d18a61db245af3340d3 WHIRLPOOL d4d197662e506519f4b964c596964b720e43c8b230dc28575c677e9c66a215700128908ad18b0af3a68b0d0b2b1fbbd35b30af416935f35b276c6dae226ce465
 DIST gentoo-sources-kernelimage-4.19.71.tar.xz 38645292 SHA256 b29a8adeee7d2a0acfa5e354e4045cd7aaf64fbf58aca81903e95559a2362b27 SHA512 87a87da7bd038dbedfd26685e670062513a94f438cb604b05f495710b99588dbb11621d68a28521a86fbe4a219a94f238d37086ca41084405624d39158b2f0be WHIRLPOOL 894ab8cbf396f23840b0ef2078c745b383dd6177b95b314af53e2d17787197ed1590d0bffd4d83dd100d3abd7fb49b11b4eee51f8c0e442be6ee060a43a1b53c
+DIST gentoo-sources-kernelimage-4.19.72.tar.xz 55078128 SHA256 682b87b307fdd85f2b0502d9290f90dab7be1c39243515faadfce7304b989e6c SHA512 39714b46fae62a9b01a6d642ec4fbbfabeb4d8c02888dc63273e33d18c6539bdde6c7b636473dab5185000fb136bfb6377320c47cad58c1579c1f0893537d373 WHIRLPOOL 3f6693eefc6edb55dbba62ab97610629c717557c5745ea800c94f650bb50abda1236293828b774e55442b57500a19977a5f4e087dcc31383cda5ded9ffc749f9
 EBUILD gentoo-sources-kernelimage-4.19.71.ebuild 995 SHA256 12d0a19c4662b3b1484b86e8f68ff6177637ae3b91ff9473d7b9588ab2df4daf SHA512 72595cacf57ebbc103d3c207c6a9440c98948284a9a8b1d0a749608d0eb11041d3c645a935164cb5ea115a726e64bd532863bc4ada6b9a1e5647f96d2c002198 WHIRLPOOL 5325309680399bf50a578f888f68797c9d4e476aee0f2f6c75259836ebacf2bec13a1eb8bcea21bab3f7dc700fc795b324317644be49231ff1b749c367e31f13
-MISC ChangeLog 230 SHA256 e4a86d831d6812e3fe26db15e302e791d564f654cae1a5328c5a10403332ec45 SHA512 87954924b63b04dd449b95834798051b86c00c5a4f6dd52ea3be6326f2aa578fd6c9eb128a589778cce9a310bbe114f0502ad83c4cf64018cb03331cff349f65 WHIRLPOOL fb90c8d66f9f572056c647923246af6442a4228e400b04daf2920780b5ac1f36a666af623f9ec81e61326b6b4d30767b83ac0190a8bd1f9ad4510fc05387585b
+EBUILD gentoo-sources-kernelimage-4.19.72.ebuild 995 SHA256 12d0a19c4662b3b1484b86e8f68ff6177637ae3b91ff9473d7b9588ab2df4daf SHA512 72595cacf57ebbc103d3c207c6a9440c98948284a9a8b1d0a749608d0eb11041d3c645a935164cb5ea115a726e64bd532863bc4ada6b9a1e5647f96d2c002198 WHIRLPOOL 5325309680399bf50a578f888f68797c9d4e476aee0f2f6c75259836ebacf2bec13a1eb8bcea21bab3f7dc700fc795b324317644be49231ff1b749c367e31f13
+MISC ChangeLog 442 SHA256 f2fcd5b9b0928b2286c84d198cbdd7e9e8bca05cfc8d59511d637521d453c1b8 SHA512 4ac30c4beaef1096e50d6b2aed473abc7b6d4521f2921b3cf7af17ca5af8596edaf6f347f32db5341107c3c919565c544a277eaf69b3a5efd41ce008fd650a8e WHIRLPOOL 6a5e0f93a3fe39e29dc2f018517523894b7854740b6015a7d0130fa1fa4311930d9c3fae6e009cafc8b39ad57d2735e907f119111f31e012f156909392e87716
 MISC metadata.xml 252 SHA256 0df10ba8b53ce829ea0fdf3b8f808ae371f24235ab02a7f94967fe0c2d7845bf SHA512 1f9486ce3b84ae866622da9d6e26a3e873467fe1607826fca6b0cc2f6091b0c8f94c4cff6717c57419867ac74bd371c0ef8f035ffb1ffcb1c4cbfae86f544ab5 WHIRLPOOL f993df191d6ce02786a5a2234510fbae80c9e1e1661c2a89cfe71be92cf5668fda737e28faedb21765de32526df074b3ef4eef6f5110020aa8232b1cb85aa7dc
