@@ -1,3 +1,9 @@
+*gentoo-sources-kernelimage-4.19.72 (02 Oct 2019)
+
+  02 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
+  +gentoo-sources-kernelimage-4.19.72.ebuild:
+  sys-kernel/gentoo-sources-kernelimage: version bump to 4.19.72
+
 *gentoo-sources-kernelimage-4.19.71 (30 Sep 2019)
 
   30 Sep 2019; Agostino Sarubbo <ago@gentoo.org> +files/bashrc,
